2008-10-06  Michael Snyder  <msnyder@vmware.com>

	* infrun.c (handle_inferior_event, step_into_function): Formatting.
	* infrun.c (handle_inferior_event): Formatting, spelling fix.

2008-10-04  Hui Zhu  <teawater@gmail.com>

	Change from "to_prepare_to_store" to "to_store_registers".
	* record.c (record_beneath_to_prepare_to_store): Removed.
	(record_beneath_to_store_registers): New function pointer.
	Instead "record_beneath_to_prepare_to_store". Will point
	to the low strata target "to_store_registers" function.
	(record_prepare_to_store): Removed.
	(record_store_registers): New function.
	Instead "record_prepare_to_store". Record the change of
	registers from GDB.
	(init_record_ops): Change record_prepare_to_store to
	record_store_registers.
	* record.h (record_beneath_to_prepare_to_store): Removed.
	(record_beneath_to_store_registers): New extern.
	(record_regcache_raw_write_regnum): Remove.
	* target.c (update_current_target): Change
	record_beneath_to_prepare_to_store to
	record_beneath_to_store_registers.

2008-10-06  Michael Snyder  <msnyder@vmware.com>

	* regcache.c (regcache_raw_write): Remove global variable.
	No need to include "record.h" now.
	* record.c (record_regcache_raw_write_regnum): Remove.

2008-10-05  Michael Snyder  <msnyder@vmware.com>

	* reverse.c (exec_reverse_once): Call do_cleanups explicitly.
	(show_exec_direction_func): Don't error, just inform.

	* target.c, target.h: Rename execdir to exec_direction.
	* record.c, record.h: Ditto.
	* reverse.c: Ditto.
	* remote.c: Ditto.

	* infrun.c (use_displaced_stepping): Disallow displaced
	stepping if using record/replay target.
	* infrun.c (handle_inferior_event): Fix typo in comment.

2008-10-03  Michael Snyder  <msnyder@vmware.com>

	* linux-record.c (record_linux_system_call): Cast sizeof 
	in printf calls, avoid compiler warnings on 64 bit hosts.

2008-10-04  Michael Snyder  <msnyder@vmware.com>

	* reverse.c (show_exec_direction_func): Don't error, just inform.
